discussion/kv_engine/179044/179044_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Allow to delete buckets of a given type WIP

We need to add tests, and it would be better with a create uuid

Change-Id: Ic7b0d42070ee6cc0893bc063bfd9e665850b01c5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-20 07:47:45.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-20 07:50:00.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48531/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48531/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40786/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9312/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9312/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21915/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21915/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22638/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21562/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21562/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20831/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20831/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29941/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29941/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29941/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9411/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9411/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19619/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:809:39: error: too few arguments to function call, expected 4, have 3; did you mean "std::destroy"? [clang-diagnostic-error]
            BucketManager::instance().destroy(nullptr, name, false);
                                      ^~~~~~~
                                      std::destroy
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_construct.h:240:5: note: "std::destroy" declared here
    destroy(_ForwardIterator __first, _ForwardIterator __last)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/bucket_management_command_context.cc:149:56: error: too few arguments to function call, expected 4, have 3; did you mean "std::destroy"? [clang-diagnostic-error]
                    status = BucketManager::instance().destroy(client, nm, f);
                                                       ^~~~~~~
                                                       std::destroy
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_construct.h:240:5: note: "std::destroy" declared here
    destroy(_ForwardIterator __first, _ForwardIterator __last)
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19619/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:809:39:
error: too few arguments to function call, expected 4, have 3; did you mean "std::destroy"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19619/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18831/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
